Preventing canavs selection on mobile safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,7 +33,12 @@ a {
 }
 
 #tickbar, #c {
-  /*display: none;*/
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .container {
